--- a/src/main/resources/static/web/account.html
+++ b/src/main/resources/static/web/account.html
@@ -85,7 +85,7 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr v-for="transaction in accountInfo.transactions" v-bind:class="[ transaction.type == 'CREDIT' ? 'credit-transaction' : 'debit-transaction' ]">
+                                <tr v-for="transaction in accountInfo.transactions" v-bind:class="[ transaction.type == 'CREDITO' ? 'credit-transaction' : 'debit-transaction' ]">
                                     <td>{{ transaction.id }}</td>
                                     <td>{{ transaction.description }}</td>
                                     <td>{{ formatDate(transaction.date) }}</td>
